--- a/src/dexih.functions/dexih.functions.csproj
+++ b/src/dexih.functions/dexih.functions.csproj
@@ -18,7 +18,6 @@
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
     <NetStandardImplicitPackageVersion>1.6.1</NetStandardImplicitPackageVersion>
-
   </PropertyGroup>
   <!--<ItemGroup>
     <Compile Include="**\*.cs" />
@@ -40,6 +39,7 @@
     </PackageReference>
     <PackageReference Include="System.Threading.Thread" Version="4.3.0">
     </PackageReference>
+    <PackageReference Include="System.ValueTuple" Version="4.3.1" />
     <PackageReference Include="System.Xml.XPath" Version="4.3.0">
     </PackageReference>
     <PackageReference Include="System.Xml.XPath.XDocument" Version="4.3.0">
