--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ environment:
 build_script:
 - appveyor-retry dotnet restore -v Minimal
 - dotnet build -c %CONFIGURATION%
-- dotnet pack -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o artifacts
+- dotnet pack -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
 test_script:
 - dotnet test .\test\dexih.functions.tests\dexih.functions.tests.csproj
 - dotnet test .\test\dexih.functions.tests.async\dexih.functions.tests.async.csproj
