--- a/test/dexih.functions.tests.async/dexih.functions.tests.async.csproj
+++ b/test/dexih.functions.tests.async/dexih.functions.tests.async.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <IncludeBuildOutput>false</IncludeBuildOutput>
+    <UserSecretsId>dexih.connections.test.44fc05ee-e883-4070-8840-c1d8b479a4fe</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
