--- a/test/dexih.transforms.tests.async/dexih.transforms.tests.async.csproj
+++ b/test/dexih.transforms.tests.async/dexih.transforms.tests.async.csproj
@@ -1,5 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
+    <IncludeBuildOutput>false</IncludeBuildOutput>
   </PropertyGroup>
 </Project>
