--- a/test/dexih.connections.webservice.restful.tests/dexih.connections.webservice.restful.tests.csproj
+++ b/test/dexih.connections.webservice.restful.tests/dexih.connections.webservice.restful.tests.csproj
@@ -22,5 +22,13 @@
   </Content>
 
   </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\dexih.connections.webservice.restful\dexih.connections.webservice.restful.csproj" />
+      <ProjectReference Include="..\..\src\dexih.functions\dexih.functions.csproj" />
+      <ProjectReference Include="..\..\src\dexih.transforms\dexih.transforms.csproj" />
+    </ItemGroup>
+    <ItemGroup>
+      <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
+    </ItemGroup>
 
 </Project>
