--- a/appveyor.yml
+++ b/appveyor.yml
@@ -63,14 +63,24 @@ for:
 
   configuration: Release
   build_script:
-  - dotnet pack .\src\dexih.functions -c %CONFIGURATION% --no-build -o ../../artifacts
-  - dotnet pack .\src\dexih.transforms -c %CONFIGURATION% --no-build ../../artifacts
-  - dotnet pack .\src\dexih.connections.azure -c %CONFIGURATION% --no-build -o ../../artifacts
-  - dotnet pack .\src\dexih.connections.dexih -c %CONFIGURATION% --no-build -o ../../artifacts
-  - dotnet pack .\src\dexih.connections.excel -c %CONFIGURATION% --no-build -o ../../artifacts
-  - dotnet pack .\src\dexih.connections.flatfile -c %CONFIGURATION% --no-build -o ../../artifacts
-  - dotnet pack .\src\dexih.connections.sql -c %CONFIGURATION% --no-build -o ../../artifacts
-  - dotnet pack .\src\dexih.connections.webservice.restful -c %CONFIGURATION% --no-build -o ../../artifacts
+  - appveyor-retry dotnet restore -v Minimal
+  - dotnet build -c %CONFIGURATION%
+  - cd ./src/dexih.functions
+  - dotnet pack -c %CONFIGURATION% --no-build -o ../../artifacts
+  - cd ./src/dexih.transforms
+  - dotnet pack -c %CONFIGURATION% --no-build -o ../../artifacts
+  - cd ./src/dexih.connections.azure
+  - dotnet pack -c %CONFIGURATION% --no-build -o ../../artifacts
+  - cd ./src/dexih.connections.dexih
+  - dotnet pack -c %CONFIGURATION% --no-build -o ../../artifacts
+  - cd ./src/dexih.connections.excel
+  - dotnet pack -c %CONFIGURATION% --no-build -o ../../artifacts
+  - cd ./src/dexih.connections.flatfile
+  - dotnet pack -c %CONFIGURATION% --no-build -o ../../artifacts
+  - cd ./src/dexih.connections.sql
+  - dotnet pack -c %CONFIGURATION% --no-build -o ../../artifacts
+  - cd ./src/dexih.connections.webservice.restful
+  - dotnet pack -c %CONFIGURATION% --no-build -o ../../artifacts
   
 # test branch produces a nuget package with the version suffix added.
 -
@@ -82,15 +92,22 @@ for:
   build_script:
   - appveyor-retry dotnet restore -v Minimal
   - dotnet build -c %CONFIGURATION%
-  - dotnet pack .\src\dexih.functions -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
-  - dotnet pack .\src\dexih.transforms -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
-  - dotnet pack .\src\dexih.connections.azure -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
-  - dotnet pack .\src\dexih.connections.dexih -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
-  - dotnet pack .\src\dexih.connections.excel -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
-  - dotnet pack .\src\dexih.connections.flatfile -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
-  - dotnet pack .\src\dexih.connections.sql -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
-  - dotnet pack .\src\dexih.connections.webservice.restful -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
-
+  - cd ./src/dexih.functions
+    - dotnet pack -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
+  - cd ./src/dexih.transforms
+  - dotnet pack -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
+  - cd ./src/dexih.connections.azure
+  - dotnet pack -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
+  - cd ./src/dexih.connections.dexih
+  - dotnet pack -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
+  - cd ./src/dexih.connections.excel
+  - dotnet pack -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
+  - cd ./src/dexih.connections.flatfile
+  - dotnet pack -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
+  - cd ./src/dexih.connections.sql
+  - dotnet pack -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
+  - cd ./src/dexih.connections.webservice.restful
+  - dotnet pack -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
   
 # master and dev branchs runs test only, no publishing packages
 -
