--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,6 +30,7 @@ test_script:
 - dotnet test 
 - cd ..\dexih.connections.webservice.restful.tests
 - dotnet test 
+- cd ..\..
 artifacts:
   - path: artifacts\*.nupkg
 services:
@@ -65,21 +66,21 @@ for:
   build_script:
   - appveyor-retry dotnet restore -v Minimal
   - dotnet build -c %CONFIGURATION%
-  - cd ./src/dexih.functions
+  - cd src\dexih.functions
   - dotnet pack -c %CONFIGURATION% --no-build -o ../../artifacts
-  - cd ./src/dexih.transforms
+  - cd src\dexih.transforms
   - dotnet pack -c %CONFIGURATION% --no-build -o ../../artifacts
-  - cd ./src/dexih.connections.azure
+  - cd src\dexih.connections.azure
   - dotnet pack -c %CONFIGURATION% --no-build -o ../../artifacts
-  - cd ./src/dexih.connections.dexih
+  - cd src\dexih.connections.dexih
   - dotnet pack -c %CONFIGURATION% --no-build -o ../../artifacts
-  - cd ./src/dexih.connections.excel
+  - cd src\dexih.connections.excel
   - dotnet pack -c %CONFIGURATION% --no-build -o ../../artifacts
-  - cd ./src/dexih.connections.flatfile
+  - cd src\dexih.connections.flatfile
   - dotnet pack -c %CONFIGURATION% --no-build -o ../../artifacts
-  - cd ./src/dexih.connections.sql
+  - cd src\dexih.connections.sql
   - dotnet pack -c %CONFIGURATION% --no-build -o ../../artifacts
-  - cd ./src/dexih.connections.webservice.restful
+  - cd src\dexih.connections.webservice.restful
   - dotnet pack -c %CONFIGURATION% --no-build -o ../../artifacts
   
 # test branch produces a nuget package with the version suffix added.
@@ -92,21 +93,21 @@ for:
   build_script:
   - appveyor-retry dotnet restore -v Minimal
   - dotnet build -c %CONFIGURATION%
-  - cd ./src/dexih.functions
+  - cd src\dexih.functions
     - dotnet pack -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
-  - cd ./src/dexih.transforms
+  - cd src\dexih.transforms
   - dotnet pack -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
-  - cd ./src/dexih.connections.azure
+  - cd src\dexih.connections.azure
   - dotnet pack -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
-  - cd ./src/dexih.connections.dexih
+  - cd src\dexih.connections.dexih
   - dotnet pack -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
-  - cd ./src/dexih.connections.excel
+  - cd src\dexih.connections.excel
   - dotnet pack -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
-  - cd ./src/dexih.connections.flatfile
+  - cd src\dexih.connections.flatfile
   - dotnet pack -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
-  - cd ./src/dexih.connections.sql
+  - cd src\dexih.connections.sql
   - dotnet pack -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
-  - cd ./src/dexih.connections.webservice.restful
+  - cd src\dexih.connections.webservice.restful
   - dotnet pack -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
   
 # master and dev branchs runs test only, no publishing packages
