--- a/appveyor.yml
+++ b/appveyor.yml
@@ -66,7 +66,7 @@ for:
   build_script:
   - appveyor-retry dotnet restore -v Minimal
   - dotnet build -c %CONFIGURATION%
-  - cd src\dexih.functions
+  - cd .\src\dexih.functions
   - dotnet pack -c %CONFIGURATION% --no-build -o ../../artifacts
   - cd ..\dexih.transforms
   - dotnet pack -c %CONFIGURATION% --no-build -o ../../artifacts
@@ -93,8 +93,8 @@ for:
   build_script:
   - appveyor-retry dotnet restore -v Minimal
   - dotnet build -c %CONFIGURATION%
-  - cd src\dexih.functions
-    - dotnet pack -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
+  - cd .\src\dexih.functions
+  - dotnet pack -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
   - cd ..\dexih.transforms
   - dotnet pack -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o ../../artifacts
   - cd ..\dexih.connections.azure
